--- a/cve_project/templates/registration/login.html
+++ b/cve_project/templates/registration/login.html
@@ -7,7 +7,7 @@
     <div class="col-md-3 col-sm-5 col-5">
         <form method="post">
             {% csrf_token %}
-            <h1 class="h3 mb-3 fw-normal">Please login</h1>
+            <h1 class="h3 mb-3 fw-normal">Вход в приложение</h1>
             <div>
                 {{ form.as_p }}
             </div>
