--- a/cve_project/static/css/signin.css
+++ b/cve_project/static/css/signin.css
@@ -8,6 +8,12 @@
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  min-width: 20px;
+  max-width: 50px
+}
+
+.container {
+width: 40px
 }
 
 .form-signin {
