Добавлен поиск в Opensearch

--- a/cve_project/templates/base.html
+++ b/cve_project/templates/base.html
@@ -40,8 +40,8 @@
                                 Уязвимости
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="/">Перечень уязвимостей</a></li>
-                                <li><a class="dropdown-item" href="#">Письма ФСТЭК</a></li>
+                                <li><a class="dropdown-item" href="/">Перечень уязвимостей ФСТЭК</a></li>
+                                <li><a class="dropdown-item" href="/vul">Поиск бюлетеней</a></li>
                                 <li><a class="dropdown-item" href="#">Программное обеспечение</a></li>
                             </ul>
                         </li>
